# Lexer-for-cs2205

./: .gitignore  CMakeLists.txt  DFALexicalAnalyzer.c  DFALexicalAnalyzer.h  NFAToDFA.c  NFAToDFA.h  Parser.c  Parser.h  RegexToNFA.c  RegexToNFA.h  SimplifyRegex.c  SimplifyRegex.h  lang.c  lang.h  main.c  readme.md
include/: DFALexicalAnalyzer.h  NFAToDFA.h  RegexToNFA.h  Regex_Creator_For_User.h  SimplifyRegex.h  lang.h
release/: main
src/: DFALexicalAnalyzer.c  NFAToDFA.c  RegexToNFA.c  Regex_Creator_For_User.c  SimplifyRegex.c  lang.c  main.c
src/read_files/: read_file1  read_file10  read_file2  read_file3  read_file4  read_file5  read_file6  read_file8  read_file9
test/: compare_struct.c  compare_struct.h  test.c  test.h
test/test_task1/: test_task1.c  test_task1.h
test/test_task2/: test_task2.c  test_task2.h
test/test_task3/: test_task3.c  test_task3.h
test/test_task4/: test_task4.c  test_task4.h
